--- a/5_Events/onclick.html
+++ b/5_Events/onclick.html
@@ -11,6 +11,8 @@
 <body>
     <p>Click me to see the message </p>
     <button id = "btn">Click </button>
+    <p id = "mouse"> Mouse over example </p>
+
     <script src='onclick.js'></script>
 </body>
 </html>
