--- a/5_Events/main.html
+++ b/5_Events/main.html
@@ -12,7 +12,7 @@
     <p>Click me to see the message </p>
     <button id = "btn">Click </button>
     <p id = "mouse"> Mouse over example </p>
-
+    <button id = "node">Click me for toggle </button>
     <script src='onclick.js'></script>
 </body>
 </html>
